54-55 Building Base Landscape and Basic Layout

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -7,6 +7,6 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Levels/Landscape.Landscape
-EditorStartupMap=/Game/Levels/Landscape.Landscape
+GameDefaultMap=/Game/Levels/Arena.Arena
+EditorStartupMap=/Game/Levels/Arena.Arena
 
