--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -9,4 +9,5 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Levels/Arena.Arena
 EditorStartupMap=/Game/Levels/Arena.Arena
+GlobalDefaultGameMode=/Game/Blueprints/KGGameMode.KGGameMode_C
 
