--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -40,6 +40,8 @@ bDefaultViewportMouseLock=False
 DefaultViewportMouseLockMode=LockOnCapture
 +ActionMappings=(ActionName="Jump",Key=SpaceBar,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Jump",Key=Gamepad_FaceButton_Top,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="MeleeAttack",Key=LeftMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="MagicAttack",Key=RightMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +AxisMappings=(AxisName="Up",Key=W,Scale=1.000000)
 +AxisMappings=(AxisName="Up",Key=S,Scale=-1.000000)
 +AxisMappings=(AxisName="Up",Key=Gamepad_LeftY,Scale=1.000000)
