85 Packaging Your Build

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,2 +1,31 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=6E77DA8D4B66472CF4498CAB1A34522B
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+BuildConfiguration=PPBC_Development
+StagingDirectory=(Path="D:/EpicGames/Unreal Projects/PackagedBuilds")
+FullRebuild=False
+ForDistribution=False
+IncludeDebugFiles=False
+bNativizeBlueprintAssets=False
+UsePakFile=True
+bGenerateChunks=False
+bChunkHardReferencesOnly=False
+bBuildHttpChunkInstallData=False
+HttpChunkInstallDataDirectory=(Path="")
+HttpChunkInstallDataVersion=
+IncludePrerequisites=True
+ApplocalPrerequisitesDirectory=(Path="")
+IncludeCrashReporter=True
+InternationalizationPreset=English
+-CulturesToStage=en
++CulturesToStage=en
+DefaultCulture=en
+bCookAll=False
+bCookMapsOnly=False
+bCompressed=False
+bEncryptIniFiles=False
+bSkipEditorContent=False
++MapsToCook=(FilePath="/Game/Levels/Arena")
+
+
